Made it so empty identifiers are saved as null and that empty string can not enter the DB. Hopefully this will stop mmsi jumping from ship to ship on ais updates.